--- a/composer.json
+++ b/composer.json
@@ -20,7 +20,8 @@
         "php": "^7.1",
         "symfony/framework-bundle": "^3.0|^4.0",
         "jms/serializer": "^1.13",
-        "symfony/console": "^3.0|^4.1"
+        "symfony/console": "^3.0|^4.1",
+        "knplabs/knp-gaufrette-bundle": "~0.5"
     },
     "require-dev": {
         "symfony/phpunit-bridge": "^4.1"
