--- a/composer.json
+++ b/composer.json
@@ -21,7 +21,7 @@
         "symfony/framework-bundle": "^3.0|^4.0",
         "jms/serializer": "^1.13",
         "symfony/console": "^3.0|^4.1",
-        "knplabs/knp-gaufrette-bundle": "~0.5"
+        "knplabs/knp-gaufrette-bundle": "^0.3"
     },
     "require-dev": {
         "symfony/phpunit-bridge": "^4.1"
