--- a/composer.json
+++ b/composer.json
@@ -20,11 +20,11 @@
         "php": "^7.1",
         "symfony/framework-bundle": "^3.0|^4.0",
         "symfony/console": "^3.0|^4.1",
-        "knplabs/knp-gaufrette-bundle": "^0.3",
         "jms/serializer": "^1.13"
     },
     "require-dev": {
-        "symfony/phpunit-bridge": "^4.1"
+        "symfony/phpunit-bridge": "^4.1",
+        "knplabs/knp-gaufrette-bundle": "^0.3"
     },
     "autoload": {
         "psr-4": {
